@@ -1,3 +1,9 @@
+2008-12-23 Jim Garlick <garlick@llnl.gov>
+
+	* man : Move man pages from src directory.
+
+	* man/*.in : Standardize man page headers.  Move repquota to section 8.
+
 2008-11-03 Jim Garlick <garlick@llnl.gov>
 
 	* : tag 2.2.1
